--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -41,6 +41,7 @@
     "react-icons": "^3.11.0",
     "react-markdown": "^4.3.1",
     "react-syntax-highlighter": "^15.2.1",
+    "react-twitter-embed": "^3.0.3",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
